--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
 
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --color-bg: #1f1f38;
+  --color-white: #fff;
+
+  --transition: all 400ms ease;
+
+
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,11 +36,12 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: Poppins sans-serif;
+  color: var(--color-white);
+  background: var(--color-bg);
+  background-image: url('/img/bg-texture.png');
+}
+
+.hovered .absolute {
+  opacity: 0.7;
 }
