--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
-  --color-bg: #1f1f38;
+  --color-bg: #252544;
   --color-white: #fff;
 
   --transition: all 400ms ease;
