--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -69,5 +69,19 @@
 
 .image {
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+}
 
+.input {
+    background-color: transparent;
+    border: 1px solid #f1f1f1;
+    padding: 10px;
+    border-radius: 5px;
+    transition: all .2s linear;
+  margin-bottom: 20px;
+
+    &:focus {
+      border: 1px solid #2c2c6c;
+      background-color: #fff;
+      color: #252544;
+    }
 }
