--- a/src/app/[movie]/Movie.module.scss
+++ b/src/app/[movie]/Movie.module.scss
@@ -121,7 +121,7 @@
   }
 
   &__btn {
-    border: 1px solid #FFFFFF;
+    border: 1px solid red;
     padding: 10px;
     border-radius: 5px;
     transition: all .2s linear;
@@ -129,6 +129,15 @@
     &:hover {
       background-color: #fff;
       color: black;
+      border: 1px solid #f1f1f1;
     }
+  }
+
+  &__favWrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 20px;
+    margin-bottom: 50px;
   }
 }
